rename main script to mktoolchain

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ dist: trusty
 fail_fast: true
 
 script:
-  - ./make.pl --arch arm --libc glibc -j2
-  - ./make.pl --arch arm --libc musl -j2
-  - ./make.pl --arch aarch64 --libc glibc -j2
-  - ./make.pl --arch aarch64 --libc musl -j2
-  - ./make.pl --arch x86_64 --libc glibc -j2
-  - ./make.pl --arch x86_64 --libc musl -j2
+  - ./mktoolchain.pl --arch arm --libc glibc -j2
+  - ./mktoolchain.pl --arch arm --libc musl -j2
+  - ./mktoolchain.pl --arch aarch64 --libc glibc -j2
+  - ./mktoolchain.pl --arch aarch64 --libc musl -j2
+  - ./mktoolchain.pl --arch x86_64 --libc glibc -j2
+  - ./mktoolchain.pl --arch x86_64 --libc musl -j2
